--- a/README
+++ b/README
@@ -12,40 +12,41 @@ all you need to get started.  Once you have the system loaded, you can
 try the following small example, which replicates the functionality of
 'tar tf':
 
-(in-package :archive)
-
 (defun list-archive-entries (pathname)
-  (with-open-archive (archive pathname :direction :input)
-    (do-archive-entries (entry archive)
-      (format t "~A~%" (name entry)))))
+  (archive:with-open-archive (archive pathname :direction :input)
+    (archive:do-archive-entries (entry archive)
+      (format t "~A~%" (archive:name entry)))))
 
-Access to the data for individual entries is also provided.  The
-following example prints out the first line of every file in the archive
-(assuming that the entry is a text file, of course):
+Access to the data for individual entries is also provided.
+ENTRY-STREAM returns a stream that provides access to the raw bytes of
+data for the entry.  If you want to access it as text, you need to use a
+library to encode the bytes into characters, or wrap the stream using
+Edi Weitz's FLEXI-STREAMS.  The following example prints out the first
+line of every file in the archive (assuming that the entry is a text
+file, of course):
 
-(in-package :archive)
-
-(defun list-archive-entries (pathname)
-  (with-open-archive (archive pathname :direction :input)
-    (do-archive-entries (entry archive)
-      (let ((stream (entry-stream entry)))
-        (format t "~A~%" (read-line stream))))))
+(defun first-line-of-archive-entries (pathname)
+  (archive:with-open-archive (archive pathname :direction :input)
+    (archive:do-archive-entries (entry archive)
+      (when (archive:entry-regular-file-p entry)
+        (let ((stream (flexi-streams:make-flexi-stream (entry-stream entry))))
+          (format t "~A~%" (read-line stream)))))))
 
 Another thing to do is create archives:
 
-(in-package :archive)
-
 ;;; This function is actually included in ARCHIVE.
 (defun create-tar-file (pathname filelist)
-  (with-open-archive (archive pathname :direction :output
-                              :if-exists :supersede)
-    (dolist (file filelist (finalize-archive archive))
-      (let ((entry (create-tar-entry-from-pathname file)))
-        (write-entry-to-archive archive entry)))))
+  (archive:with-open-archive (archive pathname :direction :output
+                                      :if-exists :supersede)
+    (dolist (file filelist (archive:finalize-archive archive))
+      (let ((entry (archive:create-entry-from-pathname archive file)))
+        (archive:write-entry-to-archive archive entry)))))
+
+Note that you need to call FINALIZE-ARCHIVE once you are done adding
+entries.
 
 Comments, criticisms, additions, and optimizations are welcome at the
 below email address.
 
 Nathan Froyd
-froydnj@cs.rice.edu
-12 January 2006
+froydnj@gmail.com
